--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/src/main/resources/org/drombler/commons/fx/samples/context/ContextProviderPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/src/main/resources/org/drombler/commons/fx/samples/context/ContextProviderPane.fxml
@@ -5,11 +5,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import org.drombler.commons.fx.docking.*?>
 
-<fx:root type="DockablePane" xmlns:fx="http://javafx.com/fxml">
-     <GridPane>
-         <Label text="%Sample.name.displayName" labelFor="$nameField" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-        <TextField editable="true" GridPane.rowIndex="0" GridPane.columnIndex="1" fx:id="nameField"/>
-     </GridPane>
+<fx:root type="GridPane" xmlns:fx="http://javafx.com/fxml">
+    <Label text="%Sample.name.displayName" labelFor="$nameField" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+    <TextField editable="true" GridPane.rowIndex="0" GridPane.columnIndex="1" fx:id="nameField"/>
 </fx:root>
