#169 Provide a modular status bar - initial StatusBar control added

--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
@@ -35,3 +35,14 @@
     -fx-text-fill: red;
 }
 
+/**************************************************************************************************
+ *                                                                                                *
+ * StatusBar                                                                              *
+ *                                                                                                *
+ **************************************************************************************************/
+
+.status-bar { 
+    -fx-skin: "org.drombler.commons.fx.scene.control.impl.skin.StatusBarSkin";
+}
+
+
