--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
@@ -45,4 +45,7 @@
     -fx-skin: "org.drombler.commons.fx.scene.control.impl.skin.StatusBarSkin";
 }
 
+.status-bar .separator{ 
+    -fx-padding: 5px 0px 5px 0px;
+}
 
