#170 Provide a progress monitor - initial implementation

--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/TaskPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/TaskPane.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -14,15 +13,14 @@
   </columnConstraints>
   <rowConstraints>
     <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
   </rowConstraints>
-   <children>
-       <Label fx:id="titleLabel" labelFor="$progressBar"/>
+  <children>
+      <Label fx:id="titleLabel" labelFor="$progressBar" styleClass="task-renderer-title-label" />
       <ProgressBar fx:id="progressBar" prefWidth="250.0" progress="0.0" GridPane.columnIndex="1" />
       <Button fx:id="cancelButton" mnemonicParsing="false" text="x" GridPane.columnIndex="2" />
       <Label fx:id="moreTasksIndicatorLabel" GridPane.columnIndex="3" />
+      <Label fx:id="messageLabel" styleClass="task-renderer-message-label" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
    </children>
-   <cursor>
-      <Cursor fx:constant="HAND" />
-   </cursor>
 </fx:root>
 
