--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
@@ -37,7 +37,7 @@
 
 /**************************************************************************************************
  *                                                                                                *
- * StatusBar                                                                              *
+ * StatusBar                                                                                      *
  *                                                                                                *
  **************************************************************************************************/
 
@@ -47,5 +47,24 @@
 
 .status-bar .separator{ 
     -fx-padding: 5px 0px 5px 0px;
+}
+
+/**************************************************************************************************
+ *                                                                                                *
+ * ProgressMonitor                                                                                      *
+ *                                                                                                *
+ **************************************************************************************************/
+
+.progress-monitor { 
+    -fx-skin: "org.drombler.commons.fx.scene.control.impl.skin.ProgressMonitorSkin";
+}
+
+.progress-monitor .task-renderer-main-task-title-label{ 
+    -fx-font-weight: bold;
+}
+
+.progress-monitor .task-renderer-message-label{ 
+    -fx-font-size: 0.916667em; /* 11pt - 1 less than the default font */
+    -fx-opacity: 0.4;
 }
 
