--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorPopupContentPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorPopupContentPane.fxml
@@ -6,7 +6,7 @@
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" type="BorderPane" xmlns="http://javafx.com/javafx/8.0.131" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <VBox fx:id="taskBox" spacing="1.0" BorderPane.alignment="CENTER" />
+       <VBox fx:id="workerBox" spacing="1.0" BorderPane.alignment="CENTER" />
    </center>
 </fx:root>
 
