--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
@@ -59,22 +59,30 @@
     -fx-skin: "org.drombler.commons.fx.scene.control.impl.skin.ProgressMonitorSkin";
 }
 
-.progress-monitor .task-pane-main-task-title-label { 
+.progress-monitor .worker-pane-main-worker-title-label { 
     -fx-font-weight: bold;
 }
 
-.progress-monitor .task-pane-message-label { 
+.progress-monitor .worker-pane-message-label { 
     -fx-font-size: 0.916667em; /* 11pt - 1 less than the default font */
     -fx-opacity: 0.4;
+}
+
+.progress-monitor .popup {
+    -fx-border-color: black; /* -fx-box-border; */
+    -fx-border-width: 1px;
+    -fx-background-color: red;
 }
 
 .progress-monitor PopupControl {
     -fx-border-color: black; /* -fx-box-border; */
     -fx-border-width: 1px;
+    -fx-background-color: blue;
 }
 
 .progress-monitor-popup {
     -fx-border-color: black; /* -fx-box-border; */
     -fx-border-width: 1px;
+    -fx-background-color: yellow;
 }
 
