--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorContentPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorContentPane.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" type="GridPane" xmlns="http://javafx.com/javafx/8.0.131" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" type="GridPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" />
         <ColumnConstraints hgrow="SOMETIMES" />
@@ -18,7 +18,11 @@
     <children>
         <Label fx:id="titleLabel" labelFor="$progressBar"/>
         <ProgressBar fx:id="progressBar" prefWidth="250.0" progress="0.0" GridPane.columnIndex="1" />
-        <Button fx:id="cancelButton" mnemonicParsing="false" text="x" GridPane.columnIndex="2" />
+        <Button fx:id="cancelButton" mnemonicParsing="false" text="x" GridPane.columnIndex="2">
+         <tooltip>
+            <Tooltip text="%cancelButton.tooltip" />
+         </tooltip>
+        </Button>
         <Label fx:id="moreWorkersIndicatorLabel" GridPane.columnIndex="3" />
     </children>
     <cursor>
