--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorContentPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorContentPane.fxml
@@ -8,8 +8,8 @@
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" type="GridPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" />
-        <ColumnConstraints hgrow="SOMETIMES" />
-        <ColumnConstraints hgrow="SOMETIMES" />
+        <ColumnConstraints hgrow="NEVER" />
+        <ColumnConstraints fillWidth="false" hgrow="NEVER" />
         <ColumnConstraints hgrow="SOMETIMES" />
     </columnConstraints>
     <rowConstraints>
@@ -17,8 +17,8 @@
     </rowConstraints>
     <children>
         <Label fx:id="titleLabel" labelFor="$progressBar"/>
-        <ProgressBar fx:id="progressBar" prefWidth="250.0" progress="0.0" GridPane.columnIndex="1" />
-        <Button fx:id="cancelButton" mnemonicParsing="false" text="x" GridPane.columnIndex="2">
+        <ProgressBar fx:id="progressBar" prefWidth="250.0" progress="0.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
+        <Button fx:id="cancelButton" mnemonicParsing="false" styleClass="cancel-button" text="x" GridPane.columnIndex="2" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">
          <tooltip>
             <Tooltip text="%cancelButton.tooltip" />
          </tooltip>
