--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
@@ -59,6 +59,10 @@
     -fx-skin: "org.drombler.commons.fx.scene.control.impl.skin.ProgressMonitorSkin";
 }
 
+.progress-monitor .cancel-button{
+    -fx-padding: 0.083333em 0.083333em 0.083333em 0.083333em; /* 1 1 1 1 */ 
+}
+
 .progress-monitor .worker-pane-main-worker-title-label { 
     -fx-font-weight: bold;
 }
@@ -68,21 +72,46 @@
     -fx-opacity: 0.4;
 }
 
-.progress-monitor .popup {
+.progress-monitor .worker-popup {
     -fx-border-color: black; /* -fx-box-border; */
+    -fx-border-width: 1px;
+}
+
+.progress-monitor .worker-popup .worker-pane-main-worker-title-label { 
+    -fx-font-weight: bold;
+}
+
+.progress-monitor .worker-popup .worker-pane-message-label { 
+    -fx-font-size: 0.916667em; /* 11pt - 1 less than the default font */
+    -fx-opacity: 0.4;
+}
+
+/*.progress-monitor .popup {
+    -fx-border-color: black;  -fx-box-border; 
     -fx-border-width: 1px;
     -fx-background-color: red;
 }
 
 .progress-monitor PopupControl {
-    -fx-border-color: black; /* -fx-box-border; */
+    -fx-border-color: black;  -fx-box-border; 
     -fx-border-width: 1px;
     -fx-background-color: blue;
 }
 
 .progress-monitor-popup {
-    -fx-border-color: black; /* -fx-box-border; */
+    -fx-border-color: black;  -fx-box-border; 
     -fx-border-width: 1px;
     -fx-background-color: yellow;
 }
+
+.progress-monitor-popup .worker-pane-main-worker-title-label { 
+    -fx-font-weight: bold;
+}
+
+.progress-monitor-popup .worker-pane-message-label { 
+    -fx-font-size: 0.916667em;  11pt - 1 less than the default font 
+    -fx-opacity: 0.4;
+}*/
+
+
 
