--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
@@ -51,7 +51,7 @@
 
 /**************************************************************************************************
  *                                                                                                *
- * ProgressMonitor                                                                                      *
+ * ProgressMonitor                                                                                *
  *                                                                                                *
  **************************************************************************************************/
 
@@ -61,10 +61,6 @@
 
 .progress-monitor .cancel-button{
     -fx-padding: 0.083333em 0.083333em 0.083333em 0.083333em; /* 1 1 1 1 */ 
-}
-
-.progress-monitor .worker-pane-main-worker-title-label { 
-    -fx-font-weight: bold;
 }
 
 .progress-monitor .worker-pane-message-label { 
@@ -77,7 +73,7 @@
     -fx-border-width: 1px;
 }
 
-.progress-monitor .worker-popup .worker-pane-main-worker-title-label { 
+.progress-monitor .worker-popup .worker-pane-title-label:main-worker { 
     -fx-font-weight: bold;
 }
 
