#170 Provide a progress monitor - cancel button

--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/WorkerPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/WorkerPane.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
 <fx:root hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" type="GridPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
@@ -17,7 +18,10 @@
     <children>
         <Label fx:id="titleLabel" labelFor="$progressBar" styleClass="worker-pane-title-label" />
         <ProgressBar fx:id="progressBar" prefWidth="250.0" progress="0.0" GridPane.columnIndex="1" />
-        <Button fx:id="cancelButton" mnemonicParsing="false" styleClass="cancel-button" text="x" GridPane.columnIndex="2" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">         
+        <Button fx:id="cancelButton" mnemonicParsing="false" styleClass="cancel-button" GridPane.columnIndex="2" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">         
+            <graphic>
+                <SVGPath content="M0, 0 L5, 5 M5, 0 L0, 5z" styleClass="icon"/>
+            </graphic>
             <tooltip>
                 <Tooltip text="%cancelButton.tooltip" />
             </tooltip>
