--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
@@ -60,7 +60,18 @@
 }
 
 .progress-monitor .cancel-button{
-    -fx-padding: 0.083333em 0.083333em 0.083333em 0.083333em; /* 1 1 1 1 */ 
+    -fx-content-display: graphic-only;
+    -fx-padding: -0.166667em 0.083333em -0.166667em 0.083333em; /*  -2 1 -2 1 */ 
+}
+
+.progress-monitor .cancel-button .icon{
+    -size: 8;
+    -fx-min-height: -size;
+    -fx-min-width: -size;
+    -fx-max-height: -size;
+    -fx-max-width: -size;
+
+    -fx-stroke: black;
 }
 
 .progress-monitor .worker-pane-message-label { 
@@ -73,7 +84,7 @@
     -fx-border-width: 1px;
 }
 
-.progress-monitor .worker-popup .worker-pane-title-label:main-worker { 
+.progress-monitor .worker-pane:main-worker .worker-pane-title-label { 
     -fx-font-weight: bold;
 }
 
