--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/modena/modena.css
@@ -59,12 +59,12 @@
     -fx-skin: "org.drombler.commons.fx.scene.control.impl.skin.ProgressMonitorSkin";
 }
 
-.progress-monitor .cancel-button{
+.progress-monitor .cancel-button {
     -fx-content-display: graphic-only;
     -fx-padding: -0.166667em 0.083333em -0.166667em 0.083333em; /*  -2 1 -2 1 */ 
 }
 
-.progress-monitor .cancel-button .icon{
+.progress-monitor .cancel-button .icon {
     -size: 8;
     -fx-min-height: -size;
     -fx-min-width: -size;
@@ -80,8 +80,10 @@
 }
 
 .progress-monitor .worker-popup {
-    -fx-border-color: black; /* -fx-box-border; */
+    -fx-border-color: -fx-box-border; 
     -fx-border-width: 1px;
+    -fx-background-color: -fx-background;
+
 }
 
 .progress-monitor .worker-pane:main-worker .worker-pane-title-label { 
