--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorContentPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorContentPane.fxml
@@ -5,6 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
+<?import org.drombler.commons.fx.scene.control.impl.skin.*?>
 
 <fx:root hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" type="GridPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
@@ -18,7 +19,7 @@
     </rowConstraints>
     <children>
         <Label fx:id="titleLabel" labelFor="$progressBar"/>
-        <ProgressBar fx:id="progressBar" prefWidth="250.0" progress="0.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
+        <XProgressBar fx:id="progressBar" prefWidth="250.0" progress="0.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
         <Button fx:id="cancelButton" mnemonicParsing="false" styleClass="cancel-button" GridPane.columnIndex="2" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER">
             <graphic>
                 <SVGPath content="M0, 0 L5, 5 M5, 0 L0, 5z" styleClass="icon"/>
