--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/StatusBarContentPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/StatusBarContentPane.fxml
@@ -3,19 +3,19 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" type="GridPane" xmlns="http://javafx.com/javafx/8.0.131" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" type="GridPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" />
-      <ColumnConstraints hgrow="SOMETIMES" />
-    <ColumnConstraints hgrow="SOMETIMES" />
+      <ColumnConstraints hgrow="ALWAYS" />
+      <ColumnConstraints hgrow="ALWAYS" />
+      <ColumnConstraints hgrow="ALWAYS" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints vgrow="ALWAYS" />
   </rowConstraints>
    <children>
-       <HBox fx:id="leftPane" alignment="CENTER_LEFT" GridPane.columnIndex="0" GridPane.halignment="LEFT" />
-       <HBox fx:id="centerPane" alignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-       <HBox fx:id="rightPane" alignment="CENTER_RIGHT" GridPane.columnIndex="2" GridPane.halignment="RIGHT" />
+       <HBox fx:id="leftPane" alignment="CENTER_LEFT" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" />
+       <HBox fx:id="centerPane" alignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" />
+       <HBox fx:id="rightPane" alignment="CENTER_RIGHT" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" />
    </children>
 </fx:root>
 
