--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/src/main/resources/org/drombler/commons/fx/samples/fxml/FxmlSampleApplication.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/src/main/resources/org/drombler/commons/fx/samples/fxml/FxmlSampleApplication.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import org.drombler.commons.fx.samples.fxml.*?>
-
-<BorderPane  xmlns:fx="http://javafx.com/fxml">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import org.drombler.commons.fx.samples.fxml.CSSSamplePane?>
+<?import org.drombler.commons.fx.samples.fxml.ImageSamplePane?>
+<BorderPane xmlns:fx="http://javafx.com/fxml">
     <center>
-        <ImageSamplePane /> 
+        <HBox>
+            <ImageSamplePane/>
+            <CSSSamplePane/>
+        </HBox>
     </center>
 </BorderPane>
