#115 FXML CSS Sample - clean-up

--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/src/main/resources/org/drombler/commons/fx/samples/fxml/FXMLLoadersSampleApplication.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/src/main/resources/org/drombler/commons/fx/samples/fxml/FXMLLoadersSampleApplication.fxml
@@ -6,7 +6,7 @@
 <?import org.drombler.commons.fx.samples.fxml.ImageSamplePane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml">
     <center>
-        <HBox>
+        <HBox spacing="10">
             <ImageSamplePane/>
             <CSSSamplePane/>
         </HBox>
