--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/src/main/resources/org/drombler/commons/fx/samples/fxml/CSSSamplePane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/src/main/resources/org/drombler/commons/fx/samples/fxml/CSSSamplePane.fxml
@@ -9,19 +9,20 @@
         <Insets top="5" right="5" bottom="5" left="5"/>
     </padding>
     <Label text="%label.header.text" GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
-    <Label text="%label.1.text" GridPane.rowIndex="1" GridPane.columnIndex="0" stylesheets="@a.css"/>
+    <Label text="%label.1.text" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
     <Label text="A" GridPane.rowIndex="1" GridPane.columnIndex="1" stylesheets="@a.css" styleClass="sample, sampleA"/>
     <Label text="%label.2.text" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
     <Label text="B" GridPane.rowIndex="2" GridPane.columnIndex="1" stylesheets="@style/b.css"
            styleClass="sample, sampleB"/>
     <Label text="%label.3.text" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-    <Label text="C" GridPane.rowIndex="3" GridPane.columnIndex="1" stylesheets="@../c.css"
-           styleClass="sample, sampleC"/>
+    <Label text="C" GridPane.rowIndex="3" GridPane.columnIndex="1" stylesheets="@../c.css, @../additional.css"
+           styleClass="sample, sampleC, additional"/>
     <Label text="%label.4.text" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
     <Label text="D" GridPane.rowIndex="4" GridPane.columnIndex="1" stylesheets="@/d.css" styleClass="sample, sampleD"/>
     <Label text="%label.5.text" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
     <Label text="E" GridPane.rowIndex="5" GridPane.columnIndex="1" styleClass="sample, sampleE">
         <stylesheets>
+            <!-- Only absolute URLs supported! Without starting '@' -->
             <String fx:value="/style/e.css"/>
         </stylesheets>
     </Label>
